# Numerical-methods

SolutionOfDifferenceEquations/: BoundaryValueProblem.cpp  BoundaryValueProblem.h  CMakeLists.txt  SystemOfDifferentialEquations.cpp  SystemOfDifferentialEquations.h  main.cpp
SolutionOfDifferenceEquations/test/: system1.cpp  system1.h
SystemsOfLinearEquations/: CMakeLists.txt  Fraction.cpp  Fraction.h  GaussMethod.cpp  GaussMethod.h  Matrix.cpp  Matrix.h  RelaxationMethod.cpp  RelaxationMethod.h  main.cpp  test_fraction.cpp
SystemsOfLinearEquations/test/: matrix_in
